feat: schema 沉淀方案流水线、playground 动态连接与 Qdrant compose
- POST /qa/mysql/sedimentation/pipeline，LearningSinkPolicy，SchemaSedimentationPlanService
- SedimentationPlanPrompts；ActiveLearningService 按路写入；MysqlSchemaCatalog 动态导出重载
- qa-playground：绑定动态连接、结构化沉淀按钮；KnowledgeAssistantPrompts 兼容非文本块编译
- docker-compose（仅 Qdrant）；application.properties 注释；openspec 设计与 spec/AGENTS/project
- .gitignore：忽略 .claude/

Co-authored-by: Cursor <cursoragent@cursor.com>